--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ about:
 
 I am a student at State University of New York at Geneseo.
 
-I am interested in ...
+I am interested in fingerprint storage and signal denoising.
 
 I enjoy ...
 
